orginized files/ fixed any visible bugs and errors

--- a/sextant/src/componentStyling/Banner.css
+++ b/sextant/src/componentStyling/Banner.css
@@ -1,16 +1,15 @@
 /* NavBar.css */
 .nav {
-  /* Existing styles... */
   position: fixed;
   background-color: rgba(53, 158, 228, 0.74);
-  padding-left: 200px;
+  padding-left: 300px;
   top: 0;
   left: 0;
   width: 100%;
   height: 40px;
   z-index: 9999;
   display: flex;
-  justify-content: space-between; /* Add this to create space between "Sextant Dashboard" and "Hi" */
+  justify-content: space-between; 
   align-items: center;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
   transition: 0.6s;
@@ -18,7 +17,7 @@
 }
 
 .dashboard {
-  flex: 1; /* This will make "Sextant Dashboard" take all available space in the middle */
+  flex: 1; 
   display: flex;
   justify-content: center;
   transition: 0.6s;
@@ -36,11 +35,11 @@
   padding-top: 7px;
   padding-bottom: 4px;
   border-radius: 12px;
-  margin-right: 10px; /* Adjust this value as needed for spacing */
+  margin-right: 10px; 
   transition: 0.6s;
 }
 @media (max-width: 768px) {
   .nav {
-    padding-left: 0; /* Set padding-left to zero when screen width is 768px or smaller */
+    padding-left: 0; 
   }
 }
